[UPDATE] change the design

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
   integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
   crossorigin="anonymous"
 />
-    <title>캡스톤디자인1</title>
+    <title>알레르기 성분 체크</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
